8306992: [JVMCI] mitigate more against JVMCI related OOME causing VM to exit

Reviewed-by: never